add build docker image and run example